fix some spacing stuff

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
     border-bottom: 1px solid #e5e5e5;
 }
 #custom .result-action {
+    font-size: 0;
     max-width: 400px;
     width: 100%;
     float: none;
@@ -39,6 +40,8 @@
     float: none;
     width: auto;
     display: inline-block;
+    position: relative;
+    top: 4px;
 }
 #custom .result-description h1 {
     margin: 0;
@@ -50,9 +53,11 @@
     display: none;
 }
 #custom .result-username, #custom .result-password {
-    width: calc(50% - 15px);
+    width: 50%;
     display: inline-block;
     top: 0;
+    font-size: 14px;
+    padding-left: 10px;
 }
 #custom .result-username input, #custom .result-password input {
     width: 100%;
